去除日志、新增指标